--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Echo text
-        run: echo "Hello, world!"
+        run: echo "Hello, world!!"
